# Structured-Light-SL-SDK

./: .clang-format  .gitignore  CMakeLists.txt  README.md
doc/html/: _cy_u_s_b_serial_8h_source.html  _i_m_v_api_8h_source.html  _i_m_v_defines_8h_source.html  alc_light_crafter_8h_source.html  annotated.html  annotated_dup.js  binoocular_camera_8h_source.html  camera_2common_2type_def_8h_source.html  camera_8h_source.html  camera_factory_8h_source.html  class_gray_encoder-members.html  class_gray_encoder.html  class_gray_encoder.js  class_json_1_1_char_reader-members.html  class_json_1_1_char_reader.html  class_json_1_1_char_reader.js  class_json_1_1_char_reader_1_1_factory-members.html  class_json_1_1_char_reader_1_1_factory.html  class_json_1_1_char_reader_1_1_factory.js  class_json_1_1_char_reader_builder-members.html  class_json_1_1_char_reader_builder.html  class_json_1_1_char_reader_builder.js  class_json_1_1_exception-members.html  class_json_1_1_exception.html  class_json_1_1_fast_writer-members.html  class_json_1_1_fast_writer.html  class_json_1_1_fast_writer.js  class_json_1_1_features-members.html  class_json_1_1_features.html  class_json_1_1_logic_error-members.html  class_json_1_1_logic_error.html  class_json_1_1_our_char_reader-members.html  class_json_1_1_our_char_reader.html  class_json_1_1_our_char_reader.js  class_json_1_1_our_features-members.html  class_json_1_1_our_features.html  class_json_1_1_our_reader-members.html  class_json_1_1_our_reader.html  class_json_1_1_our_reader.js  class_json_1_1_path-members.html  (+753 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  enums_3.js  (+58 more)
doc/latex/: _cy_u_s_b_serial_8h_source.tex  _i_m_v_api_8h_source.tex  _i_m_v_defines_8h_source.tex  alc_light_crafter_8h_source.tex  annotated.tex  binoocular_camera_8h_source.tex  camera_2common_2type_def_8h_source.tex  camera_8h_source.tex  camera_factory_8h_source.tex  class_gray_encoder.tex  class_json_1_1_char_reader.tex  class_json_1_1_char_reader_1_1_factory.tex  class_json_1_1_char_reader_builder.tex  class_json_1_1_exception.tex  class_json_1_1_fast_writer.tex  class_json_1_1_features.tex  class_json_1_1_logic_error.tex  class_json_1_1_our_char_reader.tex  class_json_1_1_our_features.tex  class_json_1_1_our_reader.tex  class_json_1_1_path.tex  class_json_1_1_path_argument.tex  class_json_1_1_reader.tex  class_json_1_1_runtime_error.tex  class_json_1_1_secure_allocator.tex  class_json_1_1_static_string.tex  class_json_1_1_stream_writer.tex  class_json_1_1_stream_writer_1_1_factory.tex  class_json_1_1_stream_writer_builder.tex  class_json_1_1_styled_stream_writer.tex  class_json_1_1_styled_writer.tex  class_json_1_1_value.tex  class_json_1_1_value_const_iterator.tex  class_json_1_1_value_iterator.tex  class_json_1_1_value_iterator_base.tex  class_json_1_1_writer.tex  class_phase_encoder.tex  classsl_1_1camera_1_1_camera.eps  classsl_1_1camera_1_1_camera.tex  classsl_1_1camera_1_1_camera_factory.tex  (+285 more)
src/camera/: CMakeLists.txt
src/camera/cmake/: CameraConfig.cmake
src/camera/common/: camera.h  cameraFactory.h  typeDef.h
src/camera/module/halcon_camera/: CMakeLists.txt
src/camera/module/huaray_camera/: CMakeLists.txt
src/camera/module/huaray_camera/include/: IMVApi.h  IMVDefines.h  huarayCamera.h
src/camera/module/huaray_camera/src/: huarayCamera.cc
src/projector/: CMakeLists.txt
src/projector/cmake/: ProjectorConfig.cmake
src/projector/common/: projector.h  projectorFactory.h  typeDef.h
src/projector/module/projector_alc_lightcrafter/: CMakeLists.txt
src/projector/module/projector_dlpc_api/: CMakeLists.txt
src/projector/module/projector_dlpc_api/include/: common.hpp  projectorDlpc34xx.h  projectorDlpc34xxDual.h
src/projector/module/projector_dlpc_api/src/: cypress_i2c.c  dlpc347x_internal_patterns.c  projectorDlpc34xx.cc  projectorDlpc34xxDual.cc
src/slCamera/: CMakeLists.txt
src/slCamera/cmake/: SLCameraConfig.cmake
src/slCamera/common/: slCamera.h  slCameraFactory.h  typeDef.h
src/slCamera/config.tests/static_link_order/: CMakeCache.txt  Makefile  cmake_install.cmake
src/slCamera/include/cuda/: cudaTypeDef.cuh
src/slCamera/include/phaseSolver/: nShiftLineNGrayCodeMasterCpu.h  nStepNGrayCodeMasterCpu.h  nStepNGrayCodeMasterGpu.h  phaseSolver.h
src/slCamera/include/rectifier/: rectifier.h  rectifierCpu.h  rectifierGpu.h
src/slCamera/include/restructor/: restructor.h  restructorCpu.h  restructorGpu.h  restructorShiftLineCpu.h
src/slCamera/include/tool/: matrixsInfo.h  tool.h
src/slCamera/include/wrapCreator/: wrapCreator.h  wrapCreatorCpu.h  wrapCreatorGpu.h
src/slCamera/module/binoocularCamera/: CMakeLists.txt
src/slCamera/module/binoocularCamera/include/: binoocularCamera.h  codeMaker.h
src/slCamera/module/binoocularCamera/src/: binoocularCamer.cc  codeMaker.cc
src/slCamera/src/cuda/: phaseSolver.cu  rsestructor.cu  tool.cu  wrapCreator.cu
src/slCamera/src/phaseSolver/: nShiftLineNGrayCodeMasterCpu.cc  nStepNGrayCodeMasterCpu.cc  nStepNGrayCodeMasterGpu.cc
src/slCamera/src/rectifier/: rectifierCpu.cc  rectifierGpu.cc
src/slCamera/src/restructor/: restructorCpu.cc  restructorGpu.cc  restructorShiftLineCpu.cc
src/slCamera/src/tool/: matrixsInfo.cc  tool.cc
src/slCamera/src/wrapCreator/: wrapCreatorCpu.cc  wrapCreatorGpu.cc
test/: CMakeLists.txt  testBinocularCamera.cc  testHuarayCamera.cc  testProjectorDlpcApi3010.cc  testProjectorDlpcApi4710.cc  testSLCameraCpu.cc  testSLCameraGpu.cc  testShiftLineCodeMaster.cc
test/data/: binoocularCameraConfig.json
test/data/shiftline1/: extrinsic.yml  intrinsic.yml
